// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTokensCss > generates correct CSS for a standard surface group 1`] = `
"
:root {
  /* Elevation */
  --shadow-sm: light-dark(oklch(0 0 0 / 0.05), oklch(1 0 0 / 0.15));
  --shadow-md: light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15));
  --shadow-lg: light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15));
  --shadow-xl: light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15));
  /* Focus */
  --focus-ring-color: light-dark(oklch(0.45 0.2 250), oklch(0.75 0.2 250));
  /* Highlight */
  --highlight-ring-color: light-dark(oklch(0.45 0.2 300), oklch(0.75 0.2 300));
  --highlight-surface-color: light-dark(oklch(0.95 0.05 300), oklch(0.2 0.05 300));
}

.surface-page, body {
  --_local-light-h: 0;
  --_local-light-c: 0;
  --_local-dark-h: 0;
  --_local-dark-c: 0;
  --_surface-light-h: var(--_base-hue, var(--_local-light-h));
  --_surface-light-c: var(--_base-chroma, var(--_local-light-c));
  --_surface-dark-h: var(--_base-hue, var(--_local-dark-h));
  --_surface-dark-c: var(--_base-chroma, var(--_local-dark-c));
  --surface-token: light-dark(
    oklch(0.98 var(--_surface-light-c) var(--_surface-light-h)),
    oklch(0.1 var(--_surface-dark-c) var(--_surface-dark-h))
  );
  --text-high-token: light-dark(
    oklch(0 0 0),
    oklch(1 0 0)
  );
  --text-subtle-token: light-dark(
    oklch(0.4184 0 0),
    oklch(0.893 0 0)
  );
  --text-subtlest-token: light-dark(
    oklch(0.5085 0 0),
    oklch(0.8406 0 0)
  );
  --border-dec-token: light-dark(
    oklch(0 0 0 / 0.0515),
    oklch(0.9866 0 0 / 0.2911)
  );
  --border-int-token: light-dark(
    oklch(0 0 0 / 0.0515),
    oklch(0.9866 0 0 / 0.2911)
  );
}
.surface-page:hover {
  --_local-light-h: 0;
  --_local-light-c: 0;
  --_local-dark-h: 0;
  --_local-dark-c: 0;
  --surface-token: light-dark(
    oklch(0.95 var(--_base-chroma, var(--_local-light-c)) var(--_base-hue, var(--_local-light-h))),
    oklch(0.15 var(--_base-chroma, var(--_local-dark-c)) var(--_base-hue, var(--_local-dark-h)))
  );
}

.surface-card {
  --_local-light-h: 0;
  --_local-light-c: 0;
  --_local-dark-h: 0;
  --_local-dark-c: 0;
  --_surface-light-h: var(--_base-hue, var(--_local-light-h));
  --_surface-light-c: var(--_base-chroma, var(--_local-light-c));
  --_surface-dark-h: var(--_base-hue, var(--_local-dark-h));
  --_surface-dark-c: var(--_base-chroma, var(--_local-dark-c));
  --surface-token: light-dark(
    oklch(1 var(--_surface-light-c) var(--_surface-light-h)),
    oklch(0.2 var(--_surface-dark-c) var(--_surface-dark-h))
  );
  --text-high-token: light-dark(
    oklch(0 0 0),
    oklch(1 0 0)
  );
  --text-subtle-token: light-dark(
    oklch(0.4586 0 0),
    oklch(0.896 0 0)
  );
  --text-subtlest-token: light-dark(
    oklch(0.54 0 0),
    oklch(0.8468 0 0)
  );
  --border-dec-token: light-dark(
    oklch(0.1935 0 0 / 0.0612),
    oklch(0.9926 0 0 / 0.214)
  );
  --border-int-token: light-dark(
    oklch(0.1935 0 0 / 0.0612),
    oklch(0.9926 0 0 / 0.214)
  );
}

/* Core Utilities (Reactive Pipeline) */
.text-subtle { --_text-lightness-source: var(--text-subtle-token); }
.text-subtlest { --_text-lightness-source: var(--text-subtlest-token); }
.text-strong { --_text-lightness-source: var(--text-high-token); font-weight: 600; }

:root {
  --preset-font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  --preset-font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
  --preset-weight-medium: 500;
  --preset-weight-bold: 600;
  --preset-text-xs: 0.75rem;
  --preset-text-sm: 0.875rem;
  --preset-text-base: 1rem;
  --preset-text-lg: 1.125rem;
  --preset-text-xl: 1.25rem;
  --preset-text-2xl: 1.5rem;
  --preset-border-width: 1px;
  --preset-border-style: solid;
}

/* Preset Utilities (Typography & Layout) */
.font-mono { font-family: var(--preset-font-mono); }
.font-sans { font-family: var(--preset-font-sans); }
.font-medium { font-weight: var(--preset-weight-medium); }
.font-bold { font-weight: var(--preset-weight-bold); }
.text-xs { font-size: var(--preset-text-xs); }
.text-sm { font-size: var(--preset-text-sm); }
.text-base { font-size: var(--preset-text-base); }
.text-lg { font-size: var(--preset-text-lg); }
.text-xl { font-size: var(--preset-text-xl); }
.text-2xl { font-size: var(--preset-text-2xl); }
.preset-bordered { border: var(--preset-border-width) var(--preset-border-style) var(--border-dec-token); }
.bordered { border: 1px solid var(--border-dec-token); }"
`;

exports[`generateTokensCss > generates palette tokens when configured 1`] = `
"
:root {
  /* Elevation */
  --shadow-sm: light-dark(oklch(0 0 0 / 0.05), oklch(1 0 0 / 0.15));
  --shadow-md: light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15));
  --shadow-lg: light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15));
  --shadow-xl: light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15));
  /* Focus */
  --focus-ring-color: light-dark(oklch(0.45 0.2 250), oklch(0.75 0.2 250));
  /* Highlight */
  --highlight-ring-color: light-dark(oklch(0.45 0.2 300), oklch(0.75 0.2 300));
  --highlight-surface-color: light-dark(oklch(0.95 0.05 300), oklch(0.2 0.05 300));
  /* Data Visualization */
  --chart-1: light-dark(
    oklch(0.5 0.15 0),
    oklch(0.6 0.15 0)
  );
  --chart-2: light-dark(
    oklch(0.5 0.15 120),
    oklch(0.6 0.15 120)
  );
  --chart-3: light-dark(
    oklch(0.5 0.15 240),
    oklch(0.6 0.15 240)
  );
}

/* Core Utilities (Reactive Pipeline) */
.text-subtle { --_text-lightness-source: var(--text-subtle-token); }
.text-subtlest { --_text-lightness-source: var(--text-subtlest-token); }
.text-strong { --_text-lightness-source: var(--text-high-token); font-weight: 600; }

:root {
  --preset-font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  --preset-font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
  --preset-weight-medium: 500;
  --preset-weight-bold: 600;
  --preset-text-xs: 0.75rem;
  --preset-text-sm: 0.875rem;
  --preset-text-base: 1rem;
  --preset-text-lg: 1.125rem;
  --preset-text-xl: 1.25rem;
  --preset-text-2xl: 1.5rem;
  --preset-border-width: 1px;
  --preset-border-style: solid;
}

/* Preset Utilities (Typography & Layout) */
.font-mono { font-family: var(--preset-font-mono); }
.font-sans { font-family: var(--preset-font-sans); }
.font-medium { font-weight: var(--preset-weight-medium); }
.font-bold { font-weight: var(--preset-weight-bold); }
.text-xs { font-size: var(--preset-text-xs); }
.text-sm { font-size: var(--preset-text-sm); }
.text-base { font-size: var(--preset-text-base); }
.text-lg { font-size: var(--preset-text-lg); }
.text-xl { font-size: var(--preset-text-xl); }
.text-2xl { font-size: var(--preset-text-2xl); }
.preset-bordered { border: var(--preset-border-width) var(--preset-border-style) var(--border-dec-token); }
.bordered { border: 1px solid var(--border-dec-token); }"
`;

exports[`generateTokensCss > handles missing background values gracefully 1`] = `
"
:root {
  /* Elevation */
  --shadow-sm: light-dark(oklch(0 0 0 / 0.05), oklch(1 0 0 / 0.15));
  --shadow-md: light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15));
  --shadow-lg: light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15));
  --shadow-xl: light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15));
  /* Focus */
  --focus-ring-color: light-dark(oklch(0.45 0.2 250), oklch(0.75 0.2 250));
  /* Highlight */
  --highlight-ring-color: light-dark(oklch(0.45 0.2 300), oklch(0.75 0.2 300));
  --highlight-surface-color: light-dark(oklch(0.95 0.05 300), oklch(0.2 0.05 300));
}

.surface-unknown {
  --_local-light-h: 0;
  --_local-light-c: 0;
  --_local-dark-h: 0;
  --_local-dark-c: 0;
  --_surface-light-h: var(--_base-hue, var(--_local-light-h));
  --_surface-light-c: var(--_context-chroma, var(--_local-light-c));
  --_surface-dark-h: var(--_base-hue, var(--_local-dark-h));
  --_surface-dark-c: var(--_base-chroma, var(--_local-dark-c));
  --surface-token: light-dark(
    oklch(0 var(--_surface-light-c) var(--_surface-light-h)),
    oklch(0 var(--_surface-dark-c) var(--_surface-dark-h))
  );
  --text-high-token: light-dark(
    oklch(1 0 0),
    oklch(1 0 0)
  );
  --text-subtle-token: light-dark(
    oklch(0.893 0 0),
    oklch(0.893 0 0)
  );
  --text-subtlest-token: light-dark(
    oklch(0.8406 0 0),
    oklch(0.8406 0 0)
  );
}

/* Core Utilities (Reactive Pipeline) */
.text-subtle { --_text-lightness-source: var(--text-subtle-token); }
.text-subtlest { --_text-lightness-source: var(--text-subtlest-token); }
.text-strong { --_text-lightness-source: var(--text-high-token); font-weight: 600; }

:root {
  --preset-font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  --preset-font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
  --preset-weight-medium: 500;
  --preset-weight-bold: 600;
  --preset-text-xs: 0.75rem;
  --preset-text-sm: 0.875rem;
  --preset-text-base: 1rem;
  --preset-text-lg: 1.125rem;
  --preset-text-xl: 1.25rem;
  --preset-text-2xl: 1.5rem;
  --preset-border-width: 1px;
  --preset-border-style: solid;
}

/* Preset Utilities (Typography & Layout) */
.font-mono { font-family: var(--preset-font-mono); }
.font-sans { font-family: var(--preset-font-sans); }
.font-medium { font-weight: var(--preset-weight-medium); }
.font-bold { font-weight: var(--preset-weight-bold); }
.text-xs { font-size: var(--preset-text-xs); }
.text-sm { font-size: var(--preset-text-sm); }
.text-base { font-size: var(--preset-text-base); }
.text-lg { font-size: var(--preset-text-lg); }
.text-xl { font-size: var(--preset-text-xl); }
.text-2xl { font-size: var(--preset-text-2xl); }
.preset-bordered { border: var(--preset-border-width) var(--preset-border-style) var(--border-dec-token); }
.bordered { border: 1px solid var(--border-dec-token); }"
`;
